# Overseer

./: .gitignore  CONFIGURING_OVERSEER.md  README.md  ROADMAP.md  environment.yml  pyproject.toml
codex/: README.md
codex/01_PROJECT/: ALWAYS_INSERT_PROMPT.md  OPERATING_MODE.md
codex/02_MEMORY/: DECISION_LOG.md
codex/03_WORK/: ROADMAP.md  TASK_GRAPH.jsonl
codex/04_HUMAN_API/: HUMAN_QUEUE.md  HUMAN_TASK_TYPES.json  REQUEST_SCHEMA.md
codex/05_AGENTS/: TERMINATION.md
codex/10_OVERSEER/: HANDOFF_POLICY.json
codex/11_WORKERS/: NOTES.md
codex/AGENTS/: AGENT_PROTOCOL.md
codex/HANDOFF/: HANDOFF_PROTOCOL.md
codex/HUMAN_API/: HUMAN_QUEUE.md
codex/MEMORY/: CONTEXT_STREAM.md
codex/OVERSEER/: NOTES.md  STRATEGIC_THOUGHTS.md
codex/PROJECT/: CHARTER.md  CONSTRAINTS.md
codex/TELEMETRY/: README.md
codex/WORK/: OBJECTIVES.md  README.md
codex/WORKERS/: README.md
docs/: CONCURRENCY_SPEC.md  CONFIGURING_OVERSEER.md  OVERSEER_AS_AGENT.md
scripts/: run-ui.sh  start-dev-ui.sh
src/langchain/: __init__.py
src/langgraph/: __init__.py  graph.py
src/overseer/: __init__.py  __main__.py  chat_commands.py  chat_server.py  cli.py  codex_integrator.py  codex_store.py  daemon_api.py  fs.py  git_worktree.py  graph.py  graph_runtime.py  human_api.py  integrator.py  locks.py  overseer_graph.py  session_store.py  task_store.py  termination.py
src/overseer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/overseer/llm/: base.py  (+4 more)
tests/: test_backend.py  test_celery_backend.py  test_chat_commands.py  test_chat_server.py  test_chat_server_errors.py  test_cli.py  test_codex_integrator.py  test_codex_store.py  test_concurrency.py  test_daemon_api.py  test_daemon_runtime.py  test_fs.py  test_git_worktree.py  test_graph.py  test_handoff_checkpoint.py  test_handoff_lease.py  test_handoff_pressure.py  test_human_api.py  test_integrator.py  test_llm_base.py  test_llm_oauth.py  test_locks.py  test_overseer_core_graph.py  test_prompting.py  test_run_events.py  test_runstore.py  test_runstore_security.py  test_security_run_store.py  test_session_store.py  test_task_store.py  test_termination.py  test_ui_scaffolding.py
ui/: index.html  package-lock.json  package.json  tsconfig.json
ui/src/: App.tsx  api.ts  styles.css  types.ts  utils.ts
(+26 files in other folders)
