[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "overseer"
version = "0.1.1"
description = "Overseer orchestration scaffold"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "langgraph>=0.2.57,<0.3",
  "langchain>=0.3.19,<0.4",
  "langchain-core>=0.3.35,<0.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.1",
  "pytest-cov>=6.0.0,<7",
  "ruff>=0.9.0,<0.10",
  "black>=25.1.0,<26",
  "mypy>=1.15.0,<2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
